# hllset_manifold

./: .gitignore  01_quick_start.ipynb  02_n_token_algorithm.ipynb  03_adjacency_matrix.ipynb  04_kernel_entanglement.ipynb  05_manifold_os.ipynb  06_lattice_evolution.ipynb  07_contextual_selection.ipynb  08_priority_weighting.ipynb  09_senses_and_signs.ipynb  10_lattice_evolution.ipynb  11_relational_algebra.ipynb  AM_SUMMARY.md  C_BACKEND_README.md  ENTANGLEMENT_SINGULARITY.md  FORUM_POST.md  HRT_LATTICE_THEORY.md  HRT_THEORY_QUICKREF.md  LINKEDIN_POST.md  LINKEDIN_POST_MANIFESTO.md  MANIFOLD_OS_QUICKREF.md  NOTEBOOKS_README.md  NTOKEN_SUMMARY.md  QUICKSTART_COLUMNAR.md  README.md  SUCCESS.md  VIBE_CODING_MANIFESTO.md  demo.ipynb  demo_adjacency_matrix.py  demo_analyst_workflow.ipynb  demo_graph_visualization.ipynb  demo_hrt_theory.ipynb  demo_kernel.ipynb  demo_lattice_evolution.ipynb  demo_manifold_os.ipynb  demo_refactored.ipynb  demo_swarm.ipynb  demo_unified_storage.ipynb  hllset.ipynb  metadata.duckdb.wal  (+11 more)
DOCS/: AM_ARCHITECTURE.md  COLUMNAR_INGESTION.md  CONTEXTUAL_SELECTION_MECHANICS.md  CROSS_MODAL_COMPARISON.md  DEEPSEEK_DISCUSSION.md  DUCKDB_UNIFIED_SCHEMA.md  ENTANGLEMENT_CONSISTENCY_CRITERION.md  EXTENSION_IMMUTABILITY.md  EXTENSION_IMMUTABILITY_CHECKLIST.md  EXTENSION_IMPLEMENTATION_COMPLETE.md  EXTENSION_REFACTORING_SUMMARY.md  EXTENSION_SYSTEM.md  GRAPH_VISUALIZATION.md  HLLSET_AS_KAROUBI_CATEGORY.md  HLLSET_RELATIONAL_ALGEBRA.md  HLLSET_THEORETICAL_FOUNDATIONS.md  HRT_LATTICE_THEORY.md  HRT_THEORY_IMPLEMENTATION.md  INTRODUCTION_TO_HLLSETS.md  (+20 more)
(+105 files in other folders)
